--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -2,7 +2,13 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/02.md`
+**Lazy State Initialization**
+
+Occasionally it can be a performance issue for a React state initialization to run every time the component function runs (every render cycle).  In this example, the performance issue is a read from local storage.  To combat this, you can pass a state initialization function to `React.useState()` and it will be run only on the first rendering of the component. 
+
+**Custom React Hooks**
+
+Using the `use<>` naming methodology does not make a function a custom React hook.  A custom React hook is simply a function that utilizes React hooks or other custom hooks internally and is not a render function.
 
 ## Background
 
