--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -2,7 +2,7 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/05.md`
+Refs can be used for accessing DOM nodes directly or for maintaining/manipulating variables without causing re-renders.
 
 ## Background
 
