--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -2,7 +2,20 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/06.md`
+**`useEffect` Data Fetching Logic**
+
+Lift data fetching logic to the least common parent component required to feed children components with appropriate info.  Then pass that data to each one specifically.  
+
+Be careful when updating multiple React states within an asynchronous piece of `useEffect` code.  This can and will cause multiple re-renders of the component.  If the rendering depends on state that is set later in the function, it can throw errors that are difficult to debug.  In these instances, it is better to implement `useReducer` or to co-locate the state into a single React state object.
+
+**Error Boundaries**
+
+You can wrap isolated pieces of code (or even top level routes) with an Error Boundary class component that will catch any unhandled errors and can display a customized error visual.  These prevent the user from hitting an error and the screen just going blank. 
+
+One method for resetting the error boundary after something on the page has changed (and it should no longer be showing the error component) is to pass a unique `key` prop to the Error Boundary component that will force it to unmount and remount when desired.
+
+A helpful npm package that simplifies error maintenance is `react-error-boundary`.  This package provides a simple component interface for running and maintaining custom error handler components as well as resetting pertinent state to pull it out of an error state.
+
 
 ## Background
 
