--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -2,7 +2,7 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/04.md`
+- It is a good idea to copy state data whenever doing any kind of intermediary manipulations and then reset the state with the manipulation at the end (if required).  Manipulating React state directly is generally a bad idea.
 
 ## Background
 
